--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				</div>
 			</section>
 			<section id="two" class="wrapper style2 spotlights">
-				<a href="vfx.html" class="image"><img src="images/Forces.gif" alt="" data-position="top center" /></a>
+				<a href="vfx.html" class="image"><img src="images/Portal.gif" alt="" data-position="top center" /></a>
 				<div class="content">
 					<div class="inner">
 						<h2>My VFX</h2>
